# neon-backend

./: .gitignore  Cargo.toml
migrations/2024-01-04-033259_create_tables/: down.sql  up.sql
migrations/2024-01-05-110408_add_pk_to_relations/: down.sql  up.sql
migrations/2024-01-06-054220_add_count_to_goods_in_bundle/: down.sql  up.sql
migrations/2024-01-09-102117_add_demand_to_link_type/: down.sql  up.sql
migrations/2024-01-10-011713_add_name_to_links/: down.sql  up.sql
migrations/2024-01-11-075217_make_name_nullable/: down.sql  up.sql
migrations/2024-01-13-103108_add_auth/: down.sql  up.sql
migrations/2024-01-14-085459_add_email_to_user/: down.sql  up.sql
migrations/2024-01-16-145023_cascade_user_id_fkey/: down.sql  up.sql
migrations/2024-01-17-014245_add_oauth_verifier/: down.sql  up.sql
migrations/2024-01-19-011926_add_image_to_goods/: down.sql  up.sql
migrations/2024-01-19-040409_cascade_goods_circle_on_delete/: down.sql  up.sql
migrations/2024-01-21-034149_add_expiry_dates_to_links/: down.sql  up.sql
src/: error_handler.rs  main.rs  models.rs  schema.rs
src/routes/: artists.rs  auth.rs  bundles.rs  categories.rs  characters.rs  circles.rs  goods.rs  images.rs  links.rs  mod.rs  references.rs
src/utils/: mod.rs
